@@ -8,6 +8,33 @@ Neo4j is built using Maven - http://maven.apache.org/
 
 *Maven 3 is now supported*
 
+
+Requirements
+============
+
+At least as of Neo4j 1.7 and OpenJDK 1.7.0_147-icedtea,
+[OpenJDK 7 is unable to build Neo4j](https://groups.google.com/group/neo4j/msg/e208be9ee1c101d7) with
+following error: `java.lang.AssertionError: Missing type variable in where clause T`.
+Please use JDK 6 (OpenJDK is fine) to build Neo4j.
+
+In addition, you need to allow enough memory to the Maven build process,
+for example by adding before launching Maven:
+
+    export JAVA_OPTS='-Xms384M -Xmx512M -XX:MaxPermSize=256M'
+
+At least on OpenJDK 1.6.0_23, building Neo4j with the default settings
+throws misleading exceptions such as: (reproduced here for your information)
+
+    [ERROR] Specifications.java:[178,33] cannot find symbol
+    symbol  : method and(java.lang.Iterable<java.lang.Object>)
+    location: class org.neo4j.helpers.Specifications
+    [ERROR] Iterables.java:[342,63] <FROM,TO>map(
+		org.neo4j.helpers.Function<? super FROM,? extends TO>,
+		java.lang.Iterable<FROM>) in org.neo4j.helpers.collection.Iterables
+		cannot be applied to (<anonymous org.neo4j.helpers.Function<java.lang.Iterable<T>,
+		java.util.Iterator<T>>>,java.lang.Iterable<java.lang.Object>)
+
+
 Build Steps Community:
 ======================
 
